--- a/apps/docs/styles/globals.css
+++ b/apps/docs/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 /* Code block styles */
 pre[class*="language-"] {
   box-sizing: border-box;
